# uncontrol

./: CHANGELOG.md  Dockerfile  pyproject.toml
.github/workflows/: release.yml
docs/: classes.drawio
example/config/: settings.py  urls.py
src/chat_fortress/chat_fortress/: admin.py  models.py
src/chat_fortress/config/: settings.py
src/uncontrol/config/: settings.py
src/uncontrol/uncontrol/: admin.py  apps.py  forms.py  gpg.py  models.py  views.py
src/uncontrol/uncontrol/templates/: base.html
src/uncontrol/uncontrol/templates/uncontrol/: dashboard.html  form.html  include_css.html  include_js.html
