[project]
name = "chat-fortress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "django==5.2.7",
    "django-extensions>=4.1",
    "django-htmx>=1.26.0",
    "gunicorn==23.0.0",
    "python-gnupg==0.5.5",
]

[tool.hatch.build]
sources = ["src"]

[dependency-groups]
test = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pydot>=4.0.1",
    "pylint>=3.3.9",
    "pyparsing>=3.2.5",
    "ruff>=0.13.3",
]
